Fix centering and font-size on small devices

--- a/styles/docs.css
+++ b/styles/docs.css
@@ -113,6 +113,12 @@ pre > code {
     margin: 0 auto;
 }
 
+@media screen and ( max-width: 600px ) {
+    #operating-system-choices .button {
+        font-size: 14px;
+    }
+}
+
 /***************
 * Line numbers *
 ***************/
